--- a/styles/markdown-preview.less
+++ b/styles/markdown-preview.less
@@ -1,7 +1,7 @@
 @import "syntax-variables";
 
 @font-family: "Helvetica Neue", Helvetica, sans-serif;
-.markdown-preview {
+.markdown-preview-katex {
   font-family: @font-family;
   font-size: 14px;
   line-height: 1.6;
@@ -26,9 +26,9 @@
 }
 
 // This is styling for generic markdownized text. Anything you put in a
-// container with .markdown-preview on it should render generally well. It also
+// container with .markdown-preview-katex on it should render generally well. It also
 // includes some GitHub Flavored Markdown specific styling (like @mentions)
-.markdown-preview {
+.markdown-preview-katex {
   pre,
   code,
   tt,
@@ -153,7 +153,7 @@
   }
 
   hr {
-    background: transparent url("atom://markdown-preview/assets/hr.png") repeat-x 0 0;
+    background: transparent url("atom://markdown-preview-katex/assets/hr.png") repeat-x 0 0;
     border: 0 none;
     color: #ccc;
     height: 4px;
